--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width height=device-height" >
    <link href="20200924_153413.png" rel="shortcut icon" type="image/x-icon">
 <style> 
 #sha {
