--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
    <link href="20200924_153413.png" rel="shortcut icon" type="image/x-icon">
 <style> 
 #sha {
-position: fixed;
-top: 0;
-laft: 0;
-min-width: 100%;
-min-height: 100%;
+min-width: 70%;
+min-height: 70%;
+}
+#d{
+text-align: center;
 }
 </style> </head>
-    <body>
+    <body bgcolor="black">
        <title>Shardy's Shanty</title>
          <audio id='audio_play' loop>
           <source src="Shardy's Shanty.ogg" type="audio/ogg"> </audio>
@@ -31,5 +31,6 @@ function playg() {
         g.src = "20200924_064603.gif";
     }
 </script>
-   <img src="1600925870664.jpg" id="sha" onclick="javascript:playg();play();">
+      <div id="d">
+   <img src="1600925870664.jpg" id="sha" onclick="javascript:playg();play();"> </div>
 </body>
